--- a/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/ProductInHeader/ProductInHeaderEditDialogClass.form
+++ b/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/ProductInHeader/ProductInHeaderEditDialogClass.form
@@ -310,7 +310,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace min="8" max="32767" attributes="0"/>
+                      <EmptySpace min="8" pref="11" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -463,7 +463,6 @@
                 <Property name="text" type="java.lang.String" value="print"/>
                 <Property name="toolTipText" type="java.lang.String" value="Print Porduct In"/>
                 <Property name="actionCommand" type="java.lang.String" value="edit"/>
-                <Property name="enabled" type="boolean" value="false"/>
                 <Property name="focusable" type="boolean" value="false"/>
                 <Property name="horizontalTextPosition" type="int" value="0"/>
                 <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
