Update: Report Product Out

--- a/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/ProductInHeader/ProductInHeaderEditDialogClass.form
+++ b/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/ProductInHeader/ProductInHeaderEditDialogClass.form
@@ -310,7 +310,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace min="8" pref="11" max="32767" attributes="0"/>
+                      <EmptySpace min="8" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
